--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
   <script defer src="script.js"></script>
-  <title>mapty // Map your workouts</title>
+  <title>Go Diego</title>
 </head>
 
 <body>
